feat: 完成 TASK-1.10 - 集成 Cloudflare R2 存储
✅ 实现完整的 R2 存储服务
- 创建 R2StorageService 类，支持文件上传、查询、删除
- 文件上传带重试机制（最多3次重试）
- 自动生成文件访问 URL 和元数据管理
- 完整的错误处理和类型安全

✅ 集成真实的文件上传功能
- 替换模拟上传为真实 R2 存储
- 文件验证工具 (file-validation.ts)
- 存储管理工具 (file-storage.ts)
- 支持 JPEG、PNG、WebP 格式，最大10MB

✅ 更新健康检查和监控
- R2 连接状态实时检查
- 存储服务可用性监控
- 详细的服务状态报告

🧪 测试验证完成
- R2 连接检查: ✅ 正常
- 文件上传: ✅ 成功
- 错误处理: ✅ 完善
- 存储结构: uploads/YYYY/MM/DD/uuid_filename.ext

📊 进度更新: 迭代1 完成 10/16 任务 (63%)

🚀 下一步: TASK-1.11 配置部署环境

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
     "hono": "^3.12.8",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@face-recog/config": "workspace:*",
     "@face-recog/shared": "workspace:*",
     "@types/node": "catalog:",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0",
