feat: 完成 TASK-1.11 - 配置 wrangler 和部署
✅ 创建标准 wrangler.toml 配置
- 支持开发、测试、生产环境
- 配置环境变量和 R2 存储桶绑定
- 设置资源限制和优化参数
- 预留容器和数据库配置（迭代2、3启用）

✅ 完整的部署脚本工具链
- setup-r2.cjs: 自动创建R2存储桶和CORS配置
- setup-secrets.cjs: 交互式环境密钥管理
- deploy-check.cjs: 综合部署前检查工具
- 支持多环境配置和验证

✅ 增强的 package.json 脚本
- 开发: dev, build, type-check, lint
- 部署: deploy[:env], preview[:env], logs[:env]
- 设置: setup:r2, setup:secrets
- 检查: check[:env]

✅ 完整的部署指南文档
- 详细的环境配置说明
- 逐步部署流程指南
- 监控和维护手册
- 故障排除和解决方案

🧪 全面测试验证
- wrangler.toml 配置语法正确
- 开发服务器正常启动
- API 健康检查端点正常
- 部署检查脚本运行成功（80%评分）

📊 进度更新: 迭代1 完成 11/16 任务 (69%)

🚀 下一步: TASK-1.12 配置 Cloudflare Pages 部署

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,11 +5,24 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
-    "build": "wrangler deploy --dry-run",
+    "build": "tsc && echo 'Build completed'",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
-    "test": "vitest"
+    "test": "vitest",
+    "deploy": "wrangler deploy",
+    "deploy:staging": "wrangler deploy --env staging",
+    "deploy:production": "wrangler deploy --env production",
+    "preview": "wrangler deploy --dry-run",
+    "preview:staging": "wrangler deploy --env staging --dry-run",
+    "preview:production": "wrangler deploy --env production --dry-run",
+    "logs": "wrangler tail",
+    "logs:staging": "wrangler tail --env staging",
+    "logs:production": "wrangler tail --env production",
+    "setup:r2": "node scripts/setup-r2.cjs",
+    "setup:secrets": "node scripts/setup-secrets.cjs",
+    "check": "node scripts/deploy-check.cjs",
+    "check:staging": "node scripts/deploy-check.cjs staging",
+    "check:production": "node scripts/deploy-check.cjs production"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
