feat: 完成 TASK-1.12 - 配置 Cloudflare Pages 部署
✅ 多环境构建配置
- 环境配置文件 env.config.js 支持 dev/staging/production
- next.config.js 动态环境变量注入
- package.json 增强构建脚本 (build:staging, build:production)

✅ Cloudflare Pages 集成
- pages.config.json 定义构建和部署配置
- 支持自定义域名和安全头配置
- 静态文件缓存策略优化

✅ 自动化部署脚本 (deploy-pages.cjs)
- 多环境部署支持 (staging/production)
- 预览部署功能 (--preview)
- 部署前检查 (--check)
- 环境变量验证和构建验证
- 自动化部署流程和验证

✅ 完整的部署脚本
- npm run deploy:staging - 部署到测试环境
- npm run deploy:production - 部署到生产环境
- npm run deploy:preview:* - 预览部署
- npm run deploy:check:* - 部署前检查

✅ 完整的部署指南文档 (PAGES_DEPLOYMENT.md)
- 详细的环境配置说明
- 域名和SSL配置指南
- 监控和维护手册
- 故障排除和性能优化

🧪 全面测试验证
- 构建配置正确（staging 环境构建成功）
- 静态文件输出正常（out/ 目录生成完整）
- 环境变量正确注入（页面标题等显示正确）
- 部署检查脚本正常运行

📊 进度更新: 迭代1 完成 12/16 任务 (75%)

🚀 下一步: TASK-1.13 配置 Cloudflare Workers 部署

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,9 +6,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:staging": "NODE_ENV=production NEXT_PUBLIC_ENV=staging next build",
+    "build:production": "NODE_ENV=production NEXT_PUBLIC_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "preview": "next build && npx serve@latest out",
+    "deploy:staging": "node scripts/deploy-pages.cjs staging",
+    "deploy:production": "node scripts/deploy-pages.cjs production",
+    "deploy:preview:staging": "node scripts/deploy-pages.cjs staging --preview",
+    "deploy:preview:production": "node scripts/deploy-pages.cjs production --preview",
+    "deploy:check:staging": "node scripts/deploy-pages.cjs staging --check",
+    "deploy:check:production": "node scripts/deploy-pages.cjs production --check",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@face-recog/database": "workspace:*",
