✅ TASK-1.13: 配置 Cloudflare Workers 部署
🎯 完成功能:
- ✅ 创建 OAuth 认证版本的部署脚本 (deploy-workers-oauth.cjs)
- ✅ 配置多环境 Workers 部署 (staging/production)
- ✅ 设置自定义域名路由 (api-staging.colorsofthewind.club, api.colorsofthewind.club)
- ✅ 创建 R2 存储桶 (dev/staging/prod 环境)
- ✅ 实现完整的部署验证流程
- ✅ 添加 ESLint 配置依赖

🔧 技术实现:
- OAuth 认证避免 API Token 配置复杂性
- 多环境配置支持 (dev/staging/production)
- 自动化 R2 存储桶验证和创建
- 完整的预检、构建、部署、验证流程
- 错误处理和用户友好的反馈

📚 新增文件:
- apps/api/scripts/deploy-workers-oauth.cjs
- apps/api/scripts/setup-domains.cjs
- apps/api/scripts/setup-r2.cjs
- apps/api/scripts/setup-secrets.cjs
- apps/api/WORKERS_DEPLOYMENT.md

🚀 部署命令:
- npm run deploy:oauth:check - 部署前检查
- npm run deploy:oauth:staging - 部署到测试环境
- npm run deploy:oauth:production - 部署到生产环境

📊 进度更新: 迭代1 完成率 81% (13/16)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,9 +9,18 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts",
     "test": "vitest",
-    "deploy": "wrangler deploy",
-    "deploy:staging": "wrangler deploy --env staging",
-    "deploy:production": "wrangler deploy --env production",
+    "deploy": "node scripts/deploy-workers.cjs",
+    "deploy:staging": "node scripts/deploy-workers.cjs staging",
+    "deploy:production": "node scripts/deploy-workers.cjs production",
+    "deploy:dry-run": "node scripts/deploy-workers.cjs staging --dry-run",
+    "deploy:check": "node scripts/deploy-workers.cjs staging --check-only",
+    "deploy:check:staging": "node scripts/deploy-workers.cjs staging --check-only",
+    "deploy:check:production": "node scripts/deploy-workers.cjs production --check-only",
+    "deploy:oauth": "node scripts/deploy-workers-oauth.cjs",
+    "deploy:oauth:staging": "node scripts/deploy-workers-oauth.cjs staging",
+    "deploy:oauth:production": "node scripts/deploy-workers-oauth.cjs production",
+    "deploy:oauth:check": "node scripts/deploy-workers-oauth.cjs staging --check-only",
+    "deploy:oauth:dry-run": "node scripts/deploy-workers-oauth.cjs staging --dry-run",
     "preview": "wrangler deploy --dry-run",
     "preview:staging": "wrangler deploy --env staging --dry-run",
     "preview:production": "wrangler deploy --env production --dry-run",
@@ -20,6 +29,9 @@
     "logs:production": "wrangler tail --env production",
     "setup:r2": "node scripts/setup-r2.cjs",
     "setup:secrets": "node scripts/setup-secrets.cjs",
+    "setup:domains": "node scripts/setup-domains.cjs",
+    "setup:domains:staging": "node scripts/setup-domains.cjs staging",
+    "setup:domains:production": "node scripts/setup-domains.cjs production",
     "check": "node scripts/deploy-check.cjs",
     "check:staging": "node scripts/deploy-check.cjs staging",
     "check:production": "node scripts/deploy-check.cjs production"
@@ -36,7 +48,10 @@
     "@face-recog/shared": "workspace:*",
     "@types/node": "catalog:",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.0.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0",
     "wrangler": "^3.22.1"
