--- a/apps/web/pages.config.json
+++ b/apps/web/pages.config.json
@@ -18,7 +18,7 @@
     "destination": "out",
     "compatibilityDate": "2024-12-01",
     "compatibilityFlags": ["nodejs_compat"],
-    "customDomains": ["face-recog.com", "www.face-recog.com"]
+    "customDomains": ["colorsofthewind.club", "www.colorsofthewind.club"]
   },
   "headers": [
     {
