feat: 完成迭代1测试环境配置和资源文件创建
✅ TASK-1.14: 配置Playwright测试环境
- 创建完整的测试配置和浏览器项目
- 设置MCP报告器和CI/CD集成
- 配置全局设置和清理脚本

✅ TASK-1.15: 创建测试资源文件
- 生成12个测试资源文件(JPEG/PNG/WebP/TXT/PDF)
- 创建文件验证脚本确保格式正确
- 支持文件上传、格式验证、大小测试等场景

🔧 技术改进:
- 使用macOS sips工具创建高质量测试图片
- 实现文件格式和大小验证
- 添加GitHub Actions测试工作流
- 创建测试工具和fixtures

📊 测试覆盖:
- 25个测试用例配置完成
- 6个浏览器环境支持
- 完整的测试资源就绪

🚀 准备执行TASK-1.16: 迭代1验收测试

--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "test:debug": "playwright test --debug",
+    "test:browser": "playwright test --project=chromium",
+    "test:mobile": "playwright test --project=mobile-chrome",
+    "test:all-browsers": "playwright test --project=chromium --project=firefox --project=webkit",
+    "test:api": "playwright test --project=api",
+    "test:iteration1": "playwright test tests/iteration-1/",
+    "test:check": "playwright test --list",
+    "test:install": "playwright install",
     "test:mcp": "node scripts/mcp-test-runner.js",
     "test:report": "playwright show-report",
     "lint": "turbo run lint",
