--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,9 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "preview": "next build && npx serve@latest out",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "pages:deploy": "npx @cloudflare/next-on-pages && wrangler pages deploy .vercel/output/static",
+    "pages:dev": "npx @cloudflare/next-on-pages --dev",
     "deploy:staging": "node scripts/deploy-pages.cjs staging",
     "deploy:production": "node scripts/deploy-pages.cjs production",
     "deploy:preview:staging": "node scripts/deploy-pages.cjs staging --preview",
@@ -40,6 +43,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.12",
     "@face-recog/config": "workspace:*",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
@@ -49,6 +53,7 @@
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "wrangler": "^4.25.0"
   }
 }
