--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.0.0",
     "turbo": "^1.11.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "wait-on": "^8.0.3"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20231025.0",
