--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 安装 Playwright 浏览器
-        run: npx playwright install --with-deps ${{ matrix.browser }}
+        run: npx playwright install --with-deps
 
       - name: 构建项目
         run: pnpm run build
@@ -69,8 +69,9 @@ jobs:
           npx wait-on http://localhost:8787 --timeout 120000
 
       - name: 运行 Playwright 测试
-        run: npx playwright test --project=${{ matrix.browser }}
+        run: npx playwright test --project=${{ matrix.browser }} --reporter=line
         env:
+          CI: true
           TEST_ENV: ${{ matrix.environment }}
           TEST_BASE_URL: ${{ matrix.environment == 'local' && 'http://localhost:3000' || 'https://251f1a66.face-recog-web-staging.pages.dev' }}
           API_BASE_URL: ${{ matrix.environment == 'local' && 'http://localhost:8787' || 'https://face-recog-api-staging.small-tooth-cc10.workers.dev' }}
@@ -128,10 +129,10 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: 安装 Playwright 浏览器
-        run: npx playwright install --with-deps chromium
+        run: npx playwright install --with-deps
 
       - name: 运行性能测试
-        run: npx playwright test --project=chromium tests/performance/
+        run: npx playwright test --project=chromium --reporter=line
         env:
           TEST_ENV: staging
           TEST_BASE_URL: https://251f1a66.face-recog-web-staging.pages.dev
