🔧 修复ESLint配置问题
🐛 问题:
- shared和database包缺少ESLint配置文件
- ESLint找不到TypeScript ESLint插件
- 文件模式匹配问题

🔧 解决方案:
- 为shared和database包创建独立的ESLint配置
- 添加必要的TypeScript ESLint依赖
- 修复ESLint配置文件扩展名（.cjs）
- 更新package.json中的lint脚本使用正确的文件模式

📋 主要更改:
- 创建packages/shared/.eslintrc.cjs
- 创建packages/database/.eslintrc.cjs
- 重命名config包中的ESLint配置文件为.cjs
- 更新package.json exports和lint脚本
- 添加TypeScript ESLint依赖到shared和database包

🧪 改进:
- ESLint现在能正确识别TypeScript文件
- 独立的包级ESLint配置，避免模块系统冲突
- 更好的代码质量检查

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,7 +35,7 @@
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src"
+    "lint": "eslint \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
     "zod": "^3.22.0",
@@ -47,6 +47,9 @@
     "@face-recog/config": "workspace:*",
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-config-prettier": "^9.0.0"
   }
 }
