--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -9,9 +9,9 @@
     "tailwind/**/*"
   ],
   "exports": {
-    "./eslint/base": "./eslint/base.js",
-    "./eslint/react": "./eslint/react.js",
-    "./eslint/next": "./eslint/next.js",
+    "./eslint/base": "./eslint/base.cjs",
+    "./eslint/react": "./eslint/react.cjs",
+    "./eslint/next": "./eslint/next.cjs",
     "./typescript/base.json": "./typescript/base.json",
     "./typescript/react.json": "./typescript/react.json",
     "./typescript/next.json": "./typescript/next.json",
