--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -32,7 +32,7 @@
     "dev": "tsc --watch",
     "clean": "rm -rf dist",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "db:generate": "drizzle-kit generate:sqlite",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -50,6 +50,9 @@
     "drizzle-kit": "^0.20.0",
     "typescript": "^5.0.0",
     "eslint": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "better-sqlite3": "^9.0.0"
   }
 }
