feat: 完成迭代2容器化面部检测服务
- 实现完整的容器化面部检测服务架构
- 集成 @vladmandic/face-api 和 AI 模型
- 创建 FaceDetectorContainer 和 Cloudflare Containers 集成
- 实现面部检测 API 端点和错误处理
- 配置 Dockerfile 和容器部署
- 更新任务进度：完成 TASK-2.1 到 TASK-2.7

技术实现：
- Express.js 服务器 + TypeScript 配置
- 面部检测服务类和方法
- 容器生命周期管理
- API 路由和中间件
- 图像处理和验证
- 健康检查和监控

--- a/apps/api/wrangler.jsonc
+++ b/apps/api/wrangler.jsonc
@@ -25,25 +25,25 @@
   //   }
   // ],
 
-  // 容器服务绑定 (迭代2会启用)
-  // "containers": [
-  //   {
-  //     "class_name": "FaceDetectorContainer",
-  //     "image": "../face-detector/Dockerfile",
-  //     "instances": 5,
-  //     "name": "face-detector-service"
-  //   }
-  // ],
+  // 容器服务绑定
+  "containers": [
+    {
+      "class_name": "FaceDetectorContainer",
+      "image": "../face-detector/Dockerfile",
+      "instances": 5,
+      "name": "face-detector-service"
+    }
+  ],
 
-  // Durable Objects 绑定 (迭代2会启用)
-  // "durable_objects": {
-  //   "bindings": [
-  //     {
-  //       "name": "FACE_DETECTOR",
-  //       "class_name": "FaceDetectorContainer"
-  //     }
-  //   ]
-  // },
+  // Durable Objects 绑定
+  "durable_objects": {
+    "bindings": [
+      {
+        "name": "FACE_DETECTOR",
+        "class_name": "FaceDetectorContainer"
+      }
+    ]
+  },
 
   // 开发环境配置
   "dev": {
